base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: PLACEHOLDER_HOST
      http:
        paths:
          - path: PLACEHOLDER_PATH(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: PLACEHOLDER_SERVICE
                port:
                  number: 8080
